[workspace]
members = ["programs/*", "commons"]
resolver = "2"

[workspace.dependencies]
anchor-lang = { git = "https://github.com/coral-xyz/anchor.git", package = "anchor-lang", rev = "fa381028b6c28ab865644ac9ab02948ba30a89a2" }
anchor-client = { git = "https://github.com/coral-xyz/anchor.git", package = "anchor-client", rev = "fa381028b6c28ab865644ac9ab02948ba30a89a2"}
anchor-spl = { git = "https://github.com/coral-xyz/anchor.git", package = "anchor-spl", rev = "fa381028b6c28ab865644ac9ab02948ba30a89a2"}
clap = "4.3.3"
anyhow = "1.0.82"
shellexpand = "3.1.0"
rust_decimal = "1.31.0"
spl-associated-token-account = "6.0.0"
mpl-token-metadata = "5.1.0"
rand = "0.8.5"
tokio = "1.42.0"
serde_json = "1.0.48"
serde = "1.0.104"
solana-transaction-status = "2.1.13"
env_logger = "0.9.0"
log = "0.4.17"
bs58 = "0.5.0"
chrono = "0.4.31"
hyper = "0.14.17"
routerify = "3"
ureq = "2.0.0"
bincode = "1.3.3"
commons = { path = "./commons" }

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1

[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1
