[package]
name = "client"
version = "0.3.0"
edition = "2021"
description = "client"
authors = ["tian <tian@racoons.dev>"]

[lib]
name = "client"
crate-type = ["cdylib", "lib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
commons = { workspace = true }
anchor-lang = { workspace = true }
anchor-spl = { workspace = true }
anchor-client = { workspace = true, features = ["async"] }
clap = { workspace = true, features = ["derive"] }
anyhow = { workspace = true }
shellexpand = { workspace = true }
rust_decimal = { workspace = true, features = ["maths"] }
lb_clmm = { path = "../programs/lb_clmm", features = ["cpi"] }
spl-associated-token-account = { workspace = true }
mpl-token-metadata = { workspace = true }
rand = { workspace = true }
tokio = { workspace = true, features = ["full", "parking_lot"] }
bincode = { workspace = true }

[dev-dependencies]
proptest = "1.2.0"
